--- a/login.html
+++ b/login.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
    <img class="logo" src="img/LOGO2.png" alt="Logo SosJobs">
