--- a/registreren.html
+++ b/registreren.html
@@ -4,6 +4,7 @@
     
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registreren</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
