Veel Changes xoxo

--- a/instellingen.html
+++ b/instellingen.html
@@ -49,7 +49,7 @@
         <h2>ADMB</h2>
         <div class="profile">
             <img src="img/Message-Information-128.png" alt="AMDB Information">
-            <p>Wat is ADMB?</p>
+            <a href="overadmb.html"><p>Wat is ADMB?</p></a>
         </div>
         <div class="profile">
             <img src="img/Printer-128.png" alt="Print Contracts">
@@ -63,15 +63,15 @@
         <div class="lower">
         <div class="profile">
             <img src="img/Like-128.png" alt="Like us">
-            <p>Like SOSjobs&#63;</p>
+            <a href="likeons.html"><p>Like SOSjobs&#63;</p></a>
         </div>
         <div class="profile">
             <img src="img/Dialog-Box-About-128.png" alt="About us">
-            <p>Over ons</p>
+            <a href="overons.html"><p>Over ons</p></a>
         </div>
         <div class="profile noborderline">
             <img src="img/AutoCompleteTextBox-128.png" alt="Terms of Service">
-            <p>Terms of Service and Privacy</p>
+            <a href="termsofservice.html"><p>Terms of Service and Privacy</p></a>
         </div>
         </div>
         
