--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -26,6 +26,25 @@
                     <article class="vacature">
                         <div class="sliderUnder">
                             <section class="text">
+                                <h1>Verkoper</h1>
+                                <p>verloopt 30/06/15</p>
+                            </section>
+                            <div class="messages">
+                                <p>0</p>
+                            </div>
+                        </div>
+                        <div class="sliderOnTop">
+                            <ul class="iconList">
+                                <li class="edit"><img alt="edit icon" src="img/Edit.png"></li>
+                                <li class="delete"><img alt="delete icon" src="img/Kruisje.png"></li>
+                            </ul>
+                        </div>
+                    </article>
+                </li>
+                <li>
+                    <article class="vacature">
+                        <div class="sliderUnder">
+                            <section class="text">
                                 <h1>Kassabediende gezocht</h1>
                                 <p>verloopt 02/06/15</p>
                             </section>
