--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vacatures</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    
     <script type="text/javascript">$(document).bind("mobileinit", function(){$.extend(  $.mobile , {autoInitializePage: false})});</script>
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/jquery.easing.1.3.js"></script>
     <script src="js/vacatures_wg.js"></script>
+    
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/iconfont.css" rel="stylesheet">
     <link href="css/vacatures_wg.css" rel="stylesheet">
@@ -17,7 +19,10 @@
 <body>
     <div class="wrapper">
    
-    <header><h1>Vacatures</h1></header>
+    <header>
+        <h1>Vacatures</h1>
+        <a href="vac.html"><img class="new" src="img/plus.png" alt="Maak nieuwe vacature aan"></a>
+    </header>
     <div class="vacatures">
         <section id="lopende">
             <header><h2>Lopende vacatures</h2></header>
