--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -173,9 +173,9 @@
     <nav id="hoofdNav">
         <ul>
         <a href="vac.html"><li class="main"><p class="icon-vac"></p></li></a>
-        <a><li><p class="icon-berichten"></p></li></a>
+        <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
         <a><li><p class="icon-groepen"></p></li></a>
-        <a><li><p class="icon-nav"></p></li></a>
+        <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
     </div>
