--- a/instellingen.html
+++ b/instellingen.html
@@ -22,7 +22,7 @@
     <div class="instellingen">
         <div class="profile">
             <img src="img/IMG_0964.jpg" alt="Profiel Afbeelding">
-            <p>Michael Calewaert</p>
+            <a href="profielstudent.html"><p>Michael Calewaert</p></a>
         </div>
         
         <div class="profile">
