linken en berichten

--- a/instellingen.html
+++ b/instellingen.html
@@ -81,8 +81,8 @@
         
     <nav id="hoofdNav">
         <ul>
-        <a href="vac.html"><li><p class="icon-vac"></p></li></a>
-        <a><li><p class="icon-berichten"></p></li></a>
+        <a href="vacatures_wg.html"><li><p class="icon-vac"></p></li></a>
+        <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
         <a><li><p class="icon-groepen"></p></li></a>
         <a><li class="main"><p class="icon-nav"></p></li></a>
         </ul>
