--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -172,9 +172,9 @@
         
     <nav id="hoofdNav">
         <ul>
-        <a href="vac.html"><li class="main"><p class="icon-vac"></p></li></a>
+        <a href=""><li class="main"><p class="icon-vac"></p></li></a>
         <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
-        <a><li><p class="icon-groepen"></p></li></a>
+        <a href=""><li><p class="icon-groepen"></p></li></a>
         <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
