--- a/berichten.html
+++ b/berichten.html
@@ -23,7 +23,7 @@
        
        <div class="orden">
            <ul><li>datum</li>
-           <li>favoriete</li>
+           <li>favorieten</li>
            <li>naam</li>
            
            </ul>
