--- a/likeons.html
+++ b/likeons.html
@@ -13,7 +13,7 @@
 </head>
     
 <body>
-    <header>Like us</header>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Like us</h1></header>
     <h2>Like us on Social Media</h2>
     <div class="socialmedia">
         <img src="img/facebookcircle.png" alt="facebook">
