--- a/overadmb.html
+++ b/overadmb.html
@@ -14,7 +14,7 @@
 </head>
     
 <body>
-    <header>ADMB</header>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>ADMB</h1></header>
     <h2>Over ADMB</h2>
     <p>1.150 ADMB-medewerkers ondersteunen dagelijks het personeelsbeleid van vele tienduizenden ondernemers en organisaties. Aan deze klanten bieden we op elk moment het gepaste HR-dienstenpakket: van opstart tot loonadministratie, van rekrutering tot preventie, van kinderbijslag over verzekeringen tot HR-advies. In dialoog met onze klanten pakken we hun hr-uitdagingen aan van vandaag en morgen. Zo maken we samen werk van een succesvolle toekomst. </p>
     <p>Dankzij het uitgebreid kantorennet kan u altijd terecht in <a href="https://www.admb.be/nl/admb/contact">een ADMB-kantoor in uw buurt.</a></p>
