--- a/overons.html
+++ b/overons.html
@@ -13,7 +13,7 @@
 </head>
     
 <body>
-    <header>Over ons</header>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Over ons</h1></header>
     <h2>SOSjobs</h2>
     <p>&ldquo;SOSjobs&rdquor; wil een platform zijn waar studenten &eacute;n werkgevers&NewLine;elkaar h&eacute;&eacute;l snel en effici&euml;nt vinden&period; Dit voor korte&comma; repetitieve of&NewLine;&eacute;&eacute;nmalige opdrachten&period;</p>
     <p>&NewLine;Een student kan zich beschikbaar stellen om beroep op te doen&comma; en&NewLine;kan zijn beschikbaarheid ingeven&period; Hij kan ook snel ingaan op een&NewLine;verzoek van een werkgever&period; Hij kan zich linken aan werkgevers die&NewLine;hem wel leuk lijken om voor te werken&comma; en zo veel meer&period;&period;&period;</p>
