--- a/paswoordveranderen.html
+++ b/paswoordveranderen.html
@@ -9,12 +9,12 @@
     <link href="css/iconfont.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
-    <link href="css/paswoordveranderen.css" rel="stylesheet">
+    <link href="css/paswoordverandering.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
     
 <body>
-    <header><h1>Wachtwoord Veranderen</h1></header>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Wachtwoord Veranderen</h1></header>
     <p>Hier kan je je wachtwoord veranderen</p>
     <form>
         <input type="password" placeholder="Huidig wachtwoord" required>
