--- a/profielstudentbewerken.html
+++ b/profielstudentbewerken.html
@@ -15,7 +15,7 @@
 </head>
     
 <body>
-    <header><h1>Profiel bijwerken</h1></header>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Profiel bijwerken</h1></header>
     <div class="wrapper">
     <div class="imgline">
     <img id="profielimg" src="img/IMG_0964.jpg" alt="Profiel Foto">
