--- a/termsofservice.html
+++ b/termsofservice.html
@@ -13,8 +13,8 @@
 </head>
     
 <body>
-    <header>Terms of Service</header>
-    <h1>Terms of Service ("Terms")</h1>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Terms of Service</h1></header>
+    <h2>Terms of Service ("Terms")</h2>
 <p>Last updated: May 19, 2015</p>
 
 <p>Please read these Terms of Service ("Terms", "Terms of Service") carefully before using the www.sosjobs.be website (the "Service") operated by SOSjobs ("us", "we", or "our").</p>
