--- a/profielstudent.html
+++ b/profielstudent.html
@@ -14,7 +14,7 @@
 </head>
     
 <body>
-    <header>
+    <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a>
         <h1>Profiel</h1>
     </header>
     <div id="profielbanner">
