--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -22,7 +22,7 @@
    
     <header>
         <h1>Vacatures</h1>
-        <a href="vacatureAanmaken.html"><img class="new" src="img/plus.png" alt="Maak nieuwe vacature aan"></a>
+        <a href="vacatureAanmaken.html"><div class="plusKnop"><img src="img/plus.png"></div></a>
     </header>
     <div class="vacatures">
         <section id="lopende">
