vacatures.. mss werkt het, mss niet

--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -51,7 +51,7 @@
                     <article class="vacature">
                         <div class="sliderUnder">
                             <section class="text">
-                                <h1>Kassabediende gezocht</h1>
+                                <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
                                 <p>verloopt 02/06/15</p>
                             </section>
                             <div class="messages">
