--- a/vacatureAanmaken.html
+++ b/vacatureAanmaken.html
@@ -40,7 +40,7 @@
         <ul>
         <a href="vacatures_wg.html"><li class="main"><p class="icon-vac"></p></li></a>
         <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
-        <a href=""><li><p class="icon-groepen"></p></li></a>
+        <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
         <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
