--- a/berichten.html
+++ b/berichten.html
@@ -151,7 +151,7 @@
         <ul>
         <a href="vacatures_wg.html"><li><p class="icon-vac"></p></li></a>
         <a><li class="main"><p class="icon-berichten"></p></li></a>
-        <a href=""><li><p class="icon-groepen"></p></li></a>
+        <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
         <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
