Bewerken studenten Profiel

--- a/profielstudentbewerken.html
+++ b/profielstudentbewerken.html
@@ -17,11 +17,7 @@
 <body>
     <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Profiel bijwerken</h1></header>
     <div class="wrapper">
-    <div class="imgline">
     <img id="profielimg" src="img/IMG_0964.jpg" alt="Profiel Foto">
-        <p class="floatleft">Profiel foto aanpassen</p>
-        <img src="img/Edit-128.png" alt="Edit profiel foto">
-    </div>
     <div class="line">
     <h3>Naam</h3>
         <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
@@ -31,7 +27,7 @@
     </div>
     <div class="line">
     <h3>Geboortedatum</h3>
-        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+        <img class="bewerkinformatiedatum" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
     <p class="details">12 Maart 1994</p>
@@ -45,10 +41,59 @@
     </div>
         <div class="line">
     <h3>Email</h3>
-        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+        <img class="bewerkinformatieemail" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
     <p class="details">michael.calewaert@gmail.com</p>
+    </div>
+        <div class="line">
+    <h3>Studierichting</h3>
+        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">Multimedia en Communicatietechnologie</p>
+    </div>
+              <div class="line">
+    <h3>Beschrijving</h3>
+        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">Ik ben Michael Calewaert, ik ben een student Multimedia &amp; CommunicatieTechnologie. Ben vooral geïnteresseerd in Web Devolopmentie. Lorum isporum dieojs kitchi woki pant in da kori tijd in de vori met anissa chilling in de jente holie met zijn bassie zuster en steven die hardie werkie in de kori. Basi in de pc zaalie korie. zerie geintereseerfdie in de applie watchie. Wholla kullir habedoedie in tha annisie macbook proie. Ik willie nieie in die bakkie vliegie omdatikie metie drugsie was aant het trollie rollie.</p>
+    </div>
+                <div class="line">
+    <h3>Rijksregisternummer</h3>
+        <img class="bewerkinformatienummer" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">94031254356</p>
+    </div>
+                <div class="line">
+    <h3>Rijbewijs</h3>
+        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">Rijbewijs B</p>
+    </div>
+                <div class="line">
+    <h3>Categoriën</h3>
+        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">Horeca, Webdevelopment, Traiteur</p>
+    </div>
+                       <div class="line">
+    <h3>Kennis</h3>
+        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">HTML, CSS, Javascript, Jquery</p>
+    </div>
+                     <div class="line">
+    <h3>Hobbies</h3>
+        <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
+    </div>
+    <div class="beschrijving">
+    <p class="details">Zwemmen, Fitness, Turnen, Lopen</p>
     </div>
     </div>
       <!-- <div class="item">
