--- a/vacatureAanmaken.html
+++ b/vacatureAanmaken.html
@@ -20,7 +20,7 @@
     
     <div class="wrapper">
     
-    <header><h1>Vacatures</h1></header>
+    <header><a href="vacatures_wg.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Vacatures</h1></header>
    
     <div class="aanmaken">
         <p><span class="icon-maak"></span>Vacature aanmaken</p>
