Login + registreren improvements

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
 
 
     <a class="accountLink" href="#">Wachtwoord vergeten?</a>
-    <a class="accountLink" href="#">Nog geen account? Registreer hier!</a>
+    <a class="accountLink" href="registreren.html">Nog geen account? Registreer hier!</a>
 
     <a class="login" href="#">Login</a>
     <a class="facebookLogin" href="#">
