--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#48CFAD">
     <title>Vacatures</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     
@@ -35,9 +36,9 @@
                                 <h1>Verkoper</h1>
                                 <p>verloopt 30/06/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>0</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -54,9 +55,9 @@
                                 <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
                                 <p>verloopt 02/06/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>7</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -73,9 +74,9 @@
                                 <h1>Sales Associate</h1>
                                 <p>verloopt 06/06/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>0</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -92,9 +93,9 @@
                                 <h1>Afwasser</h1>
                                 <p>verloopt 24/06/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>12</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -117,9 +118,9 @@
                                 <h1>Winkelbediende</h1>
                                 <p>verlopen 18/05/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>1</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -136,9 +137,9 @@
                                 <h1>PR Manager</h1>
                                 <p>verlopen 04/05/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>4</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -155,9 +156,9 @@
                                 <h1>Second Assistant Manager</h1>
                                 <p>verloopt 24/06/15</p>
                             </section>
-                            <div class="messages">
+                            <a href="berichten.html" class="messages">
                                 <p>0</p>
-                            </div>
+                            </a>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
