paswoord veranderen + privacy + Facebook

--- a/instellingen.html
+++ b/instellingen.html
@@ -38,11 +38,11 @@
         </div>
         <div class="profile">
             <img src="img/Lock-128.png" alt="Privacy Instellingen">
-            <p>Privacy Instellingen</p>
+            <a href="privacy.html"><p>Privacy Instellingen</p></a>
         </div>
         <div class="profile">
             <img src="img/Facebook-128.png" alt="facebook">
-            <p>Facebook</p>
+            <a href="https://www.facebook.com/sosjob2013?fref=ts"><p>Facebook</p></a>
         </div>
         </div>
         <div class="lower">
@@ -53,11 +53,11 @@
         </div>
         <div class="profile">
             <img src="img/Printer-128.png" alt="Print Contracts">
-            <p>Print contracten</p>
+            <a href="contracten.html"><p>Print contracten</p></a>
         </div>
         <div class="profile">
             <img src="img/Contact-128.png" alt="Contact Us">
-            <p>Contacteer ADMB</p>
+            <a href="contacteeradmb.html"><p>Contacteer ADMB</p></a>
         </div>
         </div>
         <div class="lower">
@@ -83,7 +83,7 @@
         <ul>
         <a href="vacatures_wg.html"><li><p class="icon-vac"></p></li></a>
         <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
-        <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
+        <a href=""><li><p class="icon-groepen"></p></li></a>
         <a><li class="main"><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
