Werknemer-menu OK xxxxx

--- a/favorieten.html
+++ b/favorieten.html
@@ -63,7 +63,7 @@
 
         <nav id="hoofdNav">
             <ul>
-                <a href="vacatures_wg.html">
+                <a href="vacaturesWN.html">
                     <li>
                         <p class="icon-zoeken"></p>
                     </li>
@@ -73,7 +73,7 @@
                         <p class="icon-berichten"></p>
                     </li>
                 </a>
-                <a>
+                <a href="#">
                     <li class="main">
                         <p class="icon-fav"></p>
                     </li>
