--- a/instellingen.html
+++ b/instellingen.html
@@ -38,11 +38,11 @@
         </div>
         <div class="profile">
             <img src="img/Lock-128.png" alt="Privacy Instellingen">
-            <a href="privacy.html"><p>Privacy Instellingen</p></a>
+            <p>Privacy Instellingen</p>
         </div>
         <div class="profile">
             <img src="img/Facebook-128.png" alt="facebook">
-            <a href="https://www.facebook.com/sosjob2013?fref=ts"><p>Facebook</p></a>
+            <p>Facebook</p>
         </div>
         </div>
         <div class="lower">
@@ -53,11 +53,11 @@
         </div>
         <div class="profile">
             <img src="img/Printer-128.png" alt="Print Contracts">
-            <a href="contracten.html"><p>Print contracten</p></a>
+            <p>Print contracten</p>
         </div>
         <div class="profile">
             <img src="img/Contact-128.png" alt="Contact Us">
-            <a href="contacteeradmb.html"><p>Contacteer ADMB</p></a>
+            <p>Contacteer ADMB</p>
         </div>
         </div>
         <div class="lower">
@@ -81,10 +81,10 @@
         
     <nav id="hoofdNav">
         <ul>
-        <a href="vacatures_wg.html"><li><p class="icon-vac"></p></li></a>
+        <a href="vacaturesWN.html"><li><p class="icon-zoeken"></p></li></a>
         <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
-        <a href=""><li><p class="icon-groepen"></p></li></a>
-        <a><li class="main"><p class="icon-nav"></p></li></a>
+        <a href="favorieten.html"><li><p class="icon-fav"></p></li></a>
+        <a href="#"><li class="main"><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
     </div>
