--- a/berichten.html
+++ b/berichten.html
@@ -149,9 +149,9 @@
        
     <nav id="hoofdNav">
         <ul>
-        <a href="vacatures_wg.html"><li><p class="icon-vac"></p></li></a>
-        <a><li class="main"><p class="icon-berichten"></p></li></a>
-        <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
+        <a href="vacaturesWN.html"><li><p class="icon-zoeken"></p></li></a>
+        <a href="#"><li class="main"><p class="icon-berichten"></p></li></a>
+        <a href="favorieten.html"><li><p class="icon-fav"></p></li></a>
         <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
