--- a/vacaturesWN.html
+++ b/vacaturesWN.html
@@ -95,10 +95,10 @@
     
     <nav id="hoofdNav">
         <ul>
-            <a href=""><li class="main"><p class="icon-vac"></p></li></a>
-            <a href=""><li><p class="icon-berichten"></p></li></a>
-            <a href=""><li><p class="icon-groepen"></p></li></a>
-            <a href=""><li><p class="icon-nav"></p></li></a>
+            <a href="#"><li class="main"><p class="icon-zoeken"></p></li></a>
+            <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
+            <a href="favorieten.html"><li><p class="icon-fav"></p></li></a>
+            <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
     </div>
