Favorieten + vacaturesWN aanpassingen

--- a/favorieten.html
+++ b/favorieten.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Favorieten</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="js/dropDown.js"></script>
+    <script src="js/vacaturesWN.js"></script>
 
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/favorieten.css" rel="stylesheet">
@@ -22,42 +22,67 @@
         <header>
             <h1>Favorieten</h1>
         </header>
+    <div class="wrapper">
+    <section class="content">
         <nav class="tab">
             <ul>
-                <li class="active jobs">
-                    <p>Jobs</p>
-                </li><li class="stages">
-                    <p>Stages</p>
-                </li>
+                <li class="active jobs"><p>Jobs</p></li><li class="stages"><p>Stages</p></li>
             </ul>
         </nav>
-        <div class="vacature">
-            <h3>Receptie</h3>
-            <p>Je ontvangt klanten en behandelt telefonische oproepen. Je beheert de bestellingen, verzekeringsdossiers en bent contactpersoon voor de leveranciers.</p>
-            <p class="verloopdatum">Verloopt 20/06/15</p>
-            <img src="img/ster.png" alt="ster" class="sterimg">
+        <div class="jobvacatures">
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>  
         </div>
+        <div class="stagevacatures">
 
-        <div class="vacature">
-            <h3>Verkoop Bakkerij</h3>
-            <p>Onthaal van klanten, verkoop van brood en patisserie.</p>
-            <p class="verloopdatum">Verloopt 30/06/15</p>
-            <img src="img/ster.png" alt="ster" class="sterimg">
-
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>  
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div>
+            <div class="vacature">
+                <img class="ster" src="img/sterleeg.png" alt="star">
+                <h3>Sales Associate</h3> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                <p class="datum">Verloopt 29/05/2015</p>
+            </div> 
         </div>
-        <div class="vacature">
-            <h3>Zaal medewerker </h3>
-            <p>Voor onze klant gespecialiseerd in mobiele pizza-feesten zijn wij op zoek naar een jobstudent om mee te helpen in de catering.</p>
-            <p class="verloopdatum">Verloopt 07/07/15</p>
-            <img src="img/ster.png" alt="ster" class="sterimg">
-        </div>
-
-        <div class="vacature">
-            <h3>Parkeerwachter </h3>
-            <p>Wij zijn op zoek naar meerdere jobstudenten, zowel voor juli als augustus, die instaan voor het beheer van de parking. Je regelt abonnementen voor klanten en staat in voor het algemeen onderhoud</p>
-            <p class="verloopdatum">Verloopt 30/06/15</p>
-            <img src="img/ster.png" alt="ster" class="sterimg">
-        </div>
+    </section>
 
 
 
