Veranderingen paswoord pagina

--- a/paswoordveranderen.html
+++ b/paswoordveranderen.html
@@ -22,8 +22,8 @@
         <input type="password" placeholder="Nieuw wachtwoord" required>
         <input type="password" placeholder="Herhaal wachtwoord" required>
         <div class="button">
-    <button type="submit">Annuleer</button>
-        <button type="button">Change</button>
+    <button type="button">Annuleer</button>
+        <button type="submit">Change</button>
         </div>
     
     </form>
