--- a/login.html
+++ b/login.html
@@ -24,7 +24,8 @@
     <a class="accountLink" href="#">Wachtwoord vergeten?</a>
     <a class="accountLink" href="registreren.html">Nog geen account? Registreer hier!</a>
 
-    <a class="login" href="#">Login</a>
+    <a class="login" href="vacatures_wg.html">LoginWG</a>
+    <a class="login" href="vacaturesWN.html">LoginWN</a>
     <a class="facebookLogin" href="#">
     <img src="img/Facebook-128%20wit.png" alt="icon facebook"  class="fbIcoon">Log in met Facebook</a>
 
