--- a/privacy.html
+++ b/privacy.html
@@ -19,19 +19,19 @@
     <div class="content">
     <h3>Contact Informatie</h3>
     <form>
-        <input type="checkbox" value="true">Laat mijn vrienden mijn telefoon nummer zien indien ik dit heb toegevoegd.<br>
-        <input type="checkbox" value="true">Laat mijn vrienden mijn email-adres zien.<br>
+        <input type="checkbox" value="true"><p>Laat mijn vrienden mijn telefoon nummer zien indien ik dit heb toegevoegd.</p><br>
+        <input type="checkbox" value="true"><p>Laat mijn vrienden mijn email-adres zien.</p><br>
     
     </form>
     <h3>Locatievoorzieningen</h3>
     <form>
-        <input type="checkbox" value="true">Deel mijn locatie, zelfs wanneer de applicatie is gesloten.<br>
-        <input type="checkbox" value="true">Aanvaard dat deze app uw locatie mag zoeken zelfs als de applicatie is gesloten, voor verschillende SOSjobs diensten. Zoals mijn locatie updaten en me gepersonaliseerde vacatures te zoeken rondom mijn locatie.
+        <input type="checkbox" value="true"><p>Deel mijn locatie, zelfs wanneer de applicatie is gesloten.</p><br>
+        <input type="checkbox" value="true"><p>Aanvaard dat deze app uw locatie mag zoeken zelfs als de applicatie is gesloten, voor verschillende SOSjobs diensten. Zoals mijn locatie updaten en me gepersonaliseerde vacatures te zoeken rondom mijn locatie.</p>
     
     </form>
     <h3>Advertenties</h3>
     <form>
-        <input type="checkbox" value="true">Aanvaard dat SOSjobs je advertenties mag sturen in de applicatie.
+        <input type="checkbox" value="true"><p>Aanvaard dat SOSjobs je advertenties mag sturen in de applicatie.</p>
     </form>
     </div>
 </body>
