--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#48CFAD">
     <title>Vacatures</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     
@@ -36,9 +35,9 @@
                                 <h1>Verkoper</h1>
                                 <p>verloopt 30/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>0</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -55,9 +54,9 @@
                                 <h1>Kassabediende gezocht om kassa's te bedienen en mensen dingen te verkopen en er geld voor te vragen om dat dan in de kassa te plaatsen.</h1>
                                 <p>verloopt 02/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>7</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -74,9 +73,9 @@
                                 <h1>Sales Associate</h1>
                                 <p>verloopt 06/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>0</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -93,9 +92,9 @@
                                 <h1>Afwasser</h1>
                                 <p>verloopt 24/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>12</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -118,9 +117,9 @@
                                 <h1>Winkelbediende</h1>
                                 <p>verlopen 18/05/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>1</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -137,9 +136,9 @@
                                 <h1>PR Manager</h1>
                                 <p>verlopen 04/05/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>4</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -156,9 +155,9 @@
                                 <h1>Second Assistant Manager</h1>
                                 <p>verloopt 24/06/15</p>
                             </section>
-                            <a href="berichten.html" class="messages">
+                            <div class="messages">
                                 <p>0</p>
-                            </a>
+                            </div>
                         </div>
                         <div class="sliderOnTop">
                             <ul class="iconList">
@@ -174,9 +173,9 @@
     <nav id="hoofdNav">
         <ul>
         <a href=""><li class="main"><p class="icon-vac"></p></li></a>
-        <a href="berichten.html"><li><p class="icon-berichten"></p></li></a>
+        <a href="berichtenWG.html"><li><p class="icon-berichten"></p></li></a>
         <a href="groepen.html"><li><p class="icon-groepen"></p></li></a>
-        <a href="instellingen.html"><li><p class="icon-nav"></p></li></a>
+        <a href="#"><li><p class="icon-nav"></p></li></a>
         </ul>
     </nav>
     </div>
