--- a/BerichtenWG.html
+++ b/BerichtenWG.html
@@ -87,12 +87,12 @@
                         <p class="icon-berichten"></p>
                     </li>
                 </a>
-                <a href="">
+                <a href="groepen.html">
                     <li>
                         <p class="icon-groepen"></p>
                     </li>
                 </a>
-                <a href="instellingen.html">
+                <a href="#">
                     <li>
                         <p class="icon-nav"></p>
                     </li>
