Werkgever pagina's commit

--- a/BerichtenWG.html
+++ b/BerichtenWG.html
@@ -92,7 +92,7 @@
                         <p class="icon-groepen"></p>
                     </li>
                 </a>
-                <a href="#">
+                <a href="instellingenWG.html">
                     <li>
                         <p class="icon-nav"></p>
                     </li>
