--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
+    <script src="js/login.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 </head>
 
@@ -15,8 +16,8 @@
     <img class="logo" src="img/LOGO2.png" alt="Logo SosJobs">
 
     <form>
-        <input type="text" name="login" placeholder="E-mail">
-        <input class="error" type="password" name="wachtwoord" placeholder="Wachtwoord">
+        <input class="empty" type="text" name="login" placeholder="E-mail">
+        <input class="empty" type="password" name="wachtwoord" placeholder="Wachtwoord">
     </form>
 
 
