--- a/favorieten.html
+++ b/favorieten.html
@@ -31,25 +31,25 @@
         </nav>
         <div class="jobvacatures">
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
@@ -58,25 +58,25 @@
         <div class="stagevacatures">
 
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>  
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
             </div>
             <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
+                <img class="ster" src="img/ster.png" alt="star">
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
