--- a/chatbox.html
+++ b/chatbox.html
@@ -28,18 +28,19 @@
 
     <div class="wrapper">
 
-
+        
         <div class="chatLinks">
             <div class="box">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>Kun je komen werken van 10h-12h?</p>
             </div>
         </div>
+       
 
 
 
         <div class="chatRechts">
             <div class="box">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Ik weet het niet, gaat van 13H-17h?....</p>
                 <div class="driehoek"></div>
             </div>
         </div>
