--- a/groepen.html
+++ b/groepen.html
@@ -44,7 +44,7 @@
         </div>
        
         <div class="groepen">
-       <img src="img/Kassier.png"><h2>Ober</h2>
+       <img src="img/Kassier.png"><h2>Kassiers</h2>
         <p>Tom Peters</p>
         </div>
        
