--- a/instellingenWG.html
+++ b/instellingenWG.html
@@ -82,7 +82,7 @@
     <nav id="hoofdNav">
         <ul>
         <a href="vacatures_wg.html"><li><p class="icon-zoeken"></p></li></a>
-        <a href="BerichtenWG.html"><li><p class="icon-berichten"></p></li></a>
+        <a href="berichtenWG.html"><li><p class="icon-berichten"></p></li></a>
         <a href="groepen.html"><li><p class="icon-fav"></p></li></a>
         <a href="#"><li class="main"><p class="icon-nav"></p></li></a>
         </ul>
